==> NAsQuk/ch32_fromRuno/src/mios32_iic.c <==
#include "mios32_iic.h"
#include "mios32_irq.h"
#define MIOS32_IIC0_SCL_PORT    GPIOB
#define MIOS32_IIC0_SCL_PIN     GPIO_Pin_6
#define MIOS32_IIC0_SDA_PORT    GPIOB
#define MIOS32_IIC0_SDA_PIN     GPIO_Pin_7
#define MIOS32_IIC1_SCL_PORT    GPIOB
#define MIOS32_IIC1_SCL_PIN     GPIO_Pin_10
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     GPIO_Pin_11
#define MIOS32_IIC0_DUTYCYCLE I2C_DutyCycle_2
#define MIOS32_IIC1_DUTYCYCLE I2C_DutyCycle_2

s32 MIOS32_IIC_Init(u32 mode)
{
  int i;

  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

  // configure IIC pins in open drain mode
  GPIO_InitTypeDef GPIO_InitStructure;
  GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;

  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC0_SCL_PIN;
  GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC0_SDA_PIN;
  GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

#if MIOS32_IIC_NUM >= 2
  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC1_SCL_PIN;
  GPIO_Init(MIOS32_IIC1_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC1_SDA_PIN;
  GPIO_Init(MIOS32_IIC1_SDA_PORT, &GPIO_InitStructure);
#endif

  for(i=0; i<MIOS32_IIC_NUM; ++i) {
    // configure I2C peripheral
    MIOS32_IIC_InitPeripheral(i);

    // now accessible for other tasks
    iic_rec[i].iic_semaphore = 0;
    iic_rec[i].last_transfer_error = 0;
  }

  // configure and enable I2C2 interrupts

  MIOS32_IRQ_Install(I2C1_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C2_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#endif

  MIOS32_IRQ_Install(I2C1_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C2_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#endif

  return 0; // no error
}

s32 MIOS32_IIC_TransferWait()
{
  u8 iic_port = 0;
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record
  u32 repeat_ctr = MIOS32_IIC_TIMEOUT_VALUE;
  u16 last_buffer_ix = iicx->buffer_ix;

  if( iic_port >= MIOS32_IIC_NUM )
    return MIOS32_IIC_ERROR_INVALID_PORT;

  while( --repeat_ctr > 0 ) {
    // check if buffer index has changed - if so, reload repeat counter
    if( iicx->buffer_ix != last_buffer_ix ) {
      repeat_ctr = MIOS32_IIC_TIMEOUT_VALUE;
      last_buffer_ix = iicx->buffer_ix;
    }

    // get transfer state
    s32 check_state = MIOS32_IIC_TransferCheck(iic_port);

    // exit if transfer finished or error detected
    if( check_state <= 0 ) {
      if( check_state < 0 )
    iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
      return check_state;
    }
  }

  // timeout error - something is stalling...

#if 0
  // send stop condition
  I2C_GenerateSTOP(iicx->base, ENABLE);
#else
  // added by wackazong
  // see also http://midibox.org/forums/topic/15770-sda-stuck-low-on-i2c-transfer/
  // try to deblock a SDA line that is stuck low by bit-banging out a clock signal
  // and waiting until the send buffer of any slave is empty

  // disable interrupts
  I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);

  I2C_Cmd(I2C1, DISABLE);
  GPIO_InitTypeDef GPIO_InitStructure;

  // reconfigure IIC pins to push pull
  GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;

  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC0_SCL_PIN;
  GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC0_SDA_PIN;
  GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

  u32 i;
  for (i=0; i<16; i++) {
    /*Reset the SDA Pin*/
    GPIO_ResetBits(GPIOB, MIOS32_IIC0_SDA_PIN);
    vTaskDelay(20);
    /*Reset the SCL Pin*/
    GPIO_ResetBits(GPIOB, MIOS32_IIC0_SCL_PIN);
    vTaskDelay(20);
    /*Set the SCL Pin*/
    GPIO_SetBits(GPIOB, MIOS32_IIC0_SCL_PIN);
    vTaskDelay(20);
    /*Set the SDA Pin*/
    GPIO_SetBits(GPIOB, MIOS32_IIC0_SDA_PIN);
    vTaskDelay(20);
  }

  GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;

  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC0_SCL_PIN;
  GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.GPIO_Pin = MIOS32_IIC0_SDA_PIN;
  GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

  I2C_Cmd(I2C1, ENABLE);
#endif

  // re-initialize peripheral
  MIOS32_IIC_InitPeripheral(iic_port);

  // release semaphore (!)
  iicx->iic_semaphore = 0;

  return (iicx->last_transfer_error=MIOS32_IIC_ERROR_TIMEOUT);
}

static void EV_IRQHandler(iic_rec_t *iicx)
{
  u8 b;

  // Read SR1 and SR2 at the beginning (if not done so, flags may get lost)
  u32 event = I2C_GetLastEvent(iicx->base);

  // The order of the handling blocks is chosen by test results @ 1MHZ
  // don't change this order

  // RxNE set, will be cleared by reading/writing DR
  // note: also BTF will be reset after a read of SR1 (TxE flag) followed by either read/write DR
  // or a START or STOP condition generated
  // failsave: really requested a receive transfer? If not, continue to check TXE flag, if not set,
  // we'll end up in the unexpected event handler.
  if( event & I2C_FLAG_RXNE && iicx->rx_buffer_ptr != null ){
    // get received data
    b = I2C_ReceiveData(iicx->base);

    // failsave: still place in buffer?
    if( iicx->buffer_ix < iicx->buffer_len )
      iicx->rx_buffer_ptr[iicx->buffer_ix++] = b;

    // last byte received, disable interrupts and return.
    if( iicx->transfer_state.STOP_REQUESTED ) {
      // transfer finished
      iicx->transfer_state.BUSY = 0;
      // disable all interrupts
      I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);
      return;
    }

    // request NAK and stop condition before receiving last data
    if( (iicx->buffer_ix >= iicx->buffer_len-1) || (iicx->transfer_state.ABORT_IF_FIRST_BYTE_0 && iicx->buffer_ix == 1 && b == 0x00) ) {
      // request NAK
      I2C_AcknowledgeConfig(iicx->base, DISABLE);
      // request stop condition
      I2C_GenerateSTOP(iicx->base, ENABLE);
      iicx->transfer_state.STOP_REQUESTED = 1;
    }
    return;
  }

  // ADDR set, TRA flag not set (indicates transmitter/receiver mode).
  // ADDR will be cleared by a read of SR1 followed by a read of SR2 (done by I2C_GetLastEvent)
  // If transmitter mode is selected (TRA set), we go on, TXE will be catched to send the first byte
  if( (event & I2C_FLAG_ADDR) && !(event & I2C_FLAG_TRA) ){
    // address sent (receiver mode), receiving first byte - check if we already have to request NAK/Stop
    if( iicx->buffer_len == 1 ) {
      // request NAK
      I2C_AcknowledgeConfig(iicx->base, DISABLE);
      // request stop condition
      I2C_GenerateSTOP(iicx->base, ENABLE);
      iicx->transfer_state.STOP_REQUESTED = 1;
    }
    return;
  }

  // TxE set, will be cleared by writing DR, or after START or STOP was generated
  // This handling also applies for BTF, as TXE will alway be set if BTF is.
  // note: also BTF will be reset after a read of SR1 (TxE flag) followed by either read/write DR
  // or a START or STOP condition generated
  if( event & I2C_FLAG_TXE ){

    // last byte already sent, disable interrupts and return.
    if( iicx->transfer_state.STOP_REQUESTED ) {
      // transfer finished
      iicx->transfer_state.BUSY = 0;
      // disable all interrupts
      I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);
      return;
    }

    if( iicx->buffer_ix < iicx->buffer_len ) {
      // checking tx_buffer_ptr for NULL is a failsafe measure.
      I2C_SendData(iicx->base, (iicx->tx_buffer_ptr == null) ? 0 : iicx->tx_buffer_ptr[iicx->buffer_ix++]);
      return;
    }

    // peripheral is transfering last byte, request stop condition /
    // on write-without-stop transfer-type, request start condition instead
    if( !iicx->transfer_state.WRITE_WITHOUT_STOP )
      I2C_GenerateSTOP(iicx->base, ENABLE);
    else
      I2C_GenerateSTART(iicx->base, ENABLE);
    iicx->transfer_state.STOP_REQUESTED = 1;

    if( iicx->buffer_len == 0 ) {
      // transfer finished
      iicx->transfer_state.BUSY = 0;
      // disable all interrupts
      I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);
    } else {
      // Disable the I2C_IT_BUF interrupt after sending the last buffer data
      // (last EV8) to not allow a new interrupt just with TxE - only BTF will generate it
      // if this is not done, BUSY will be cleared before the transfer is finished
      I2C_ITConfig(iicx->base, I2C_IT_BUF, DISABLE);
    }
  return;
  }

  // SB set, cleared by reading SR1 (done by I2C_GetLastEvent) followed by writing DR register
  if( event & I2C_FLAG_SB ){
    // don't send address if stop was requested (WRITE_WITHOUT_STOP - mode, start condition was sent)
    // we have to wait for the application to start the next transfer
    if( iicx->transfer_state.STOP_REQUESTED ) {
      // transfer finished
      iicx->transfer_state.BUSY = 0;
      // disable all interrupts
      I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);
      return;
    }
    // send IIC address
    I2C_Send7bitAddress(iicx->base, iicx->iic_address,
      (iicx->iic_address & 1)
      ? I2C_Direction_Receiver
      : I2C_Direction_Transmitter);
    return;
  }

  // this code is only reached if something got wrong, e.g. interrupt handler is called too late,
  // the device reset itself (while testing, it was always event 0x00000000). we have to stop the transfer,
  // else read/write of corrupt data may be the result.
  I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);
  // notify error
  MIOS32_IIC_unexpected_event = event;
  iicx->transfer_error = MIOS32_IIC_ERROR_UNEXPECTED_EVENT;
  iicx->transfer_state.BUSY = 0;
  // do dummy read to send NAK + STOP condition
  I2C_AcknowledgeConfig(iicx->base, DISABLE);
  b = I2C_ReceiveData(iicx->base);
  I2C_GenerateSTOP(iicx->base, ENABLE);
  }
