==> AddictiveInstruments/ADIOS/mios32/STM32G0xx/mios32_iic.c <==
#include <mios32.h>
#define MIOS32_IIC0_SCL_PORT    GPIOB
#define MIOS32_IIC0_SCL_PIN     LL_GPIO_PIN_10
#define MIOS32_IIC0_SCL_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_10, GPIO_AF_I2C2); }
#define MIOS32_IIC0_SDA_PORT    GPIOB
#define MIOS32_IIC0_SDA_PIN     LL_GPIO_PIN_11
#define MIOS32_IIC0_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_11, GPIO_AF_I2C2); }
#define MIOS32_IIC1_SCL_PORT    GPIOB
#define MIOS32_IIC1_SCL_PIN     LL_GPIO_PIN_6
#define MIOS32_IIC1_SCL_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_6, GPIO_AF_I2C1); }
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     LL_GPIO_PIN_9
#define MIOS32_IIC1_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_9, GPIO_AF_I2C1); }
#define MIOS32_IIC1_SDA_PORT    GPIOB
#define MIOS32_IIC1_SDA_PIN     LL_GPIO_PIN_7
#define MIOS32_IIC1_SDA_AF      { GPIO_PinAFConfig(GPIOB, GPIO_PIN_7, GPIO_AF_I2C1); }
#define MIOS32_IIC0_DUTYCYCLE I2C_DutyCycle_2
#define MIOS32_IIC1_DUTYCYCLE I2C_DutyCycle_2

s32 MIOS32_IIC_Init(u32 mode)
{
  int i;

  // currently only mode 0 supported
  if( mode != 0 )
    return -1; // unsupported mode

  // configure IIC pins in open drain mode
  LL_GPIO_InitTypeDef GPIO_InitStructure;
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = GPIO_Mode_AF;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  MIOS32_IIC0_SCL_AF;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);
  MIOS32_IIC0_SDA_AF;

#if MIOS32_IIC_NUM >= 2
  GPIO_InitStructure.Pin = MIOS32_IIC1_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC1_SCL_PORT, &GPIO_InitStructure);
  MIOS32_IIC1_SCL_AF;

  GPIO_InitStructure.Pin = MIOS32_IIC1_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC1_SDA_PORT, &GPIO_InitStructure);
  MIOS32_IIC1_SDA_AF;
#endif

  for(i=0; i<MIOS32_IIC_NUM; ++i) {
    // configure I2C peripheral
    MIOS32_IIC_InitPeripheral(i);

    // now accessible for other tasks
    iic_rec[i].iic_semaphore = 0;
    iic_rec[i].last_transfer_error = 0;
  }

  // configure and enable I2C2 interrupts
  MIOS32_IRQ_Install(I2C2_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);  
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_EV_IRQn, MIOS32_IRQ_IIC_EV_PRIORITY);
#endif

  MIOS32_IRQ_Install(I2C2_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#if MIOS32_IIC_NUM >= 2
  MIOS32_IRQ_Install(I2C1_ER_IRQn, MIOS32_IRQ_IIC_ER_PRIORITY);
#endif

  return 0; // no error
}

s32 MIOS32_IIC_TransferWait(u8 iic_port)
{
  iic_rec_t *iicx = &iic_rec[iic_port];// simplify addressing of record
  u32 repeat_ctr = MIOS32_IIC_TIMEOUT_VALUE;
  u16 last_buffer_ix = iicx->buffer_ix;

  if( iic_port >= MIOS32_IIC_NUM )
    return MIOS32_IIC_ERROR_INVALID_PORT;

  while( --repeat_ctr > 0 ) {
    // check if buffer index has changed - if so, reload repeat counter
    if( iicx->buffer_ix != last_buffer_ix ) {
      repeat_ctr = MIOS32_IIC_TIMEOUT_VALUE;
      last_buffer_ix = iicx->buffer_ix;
    }

    // get transfer state
    s32 check_state = MIOS32_IIC_TransferCheck(iic_port);

    // exit if transfer finished or error detected
    if( check_state <= 0 ) {
      if( check_state < 0 )
	iicx->iic_semaphore = 0; // release semaphore for easier programming at user level
      return check_state;
    }
  }

  // timeout error - something is stalling...

#if 0
  // send stop condition
  I2C_GenerateSTOP(iicx->base, ENABLE);
#else
  // added by wackazong
  // see also http://midibox.org/forums/topic/15770-sda-stuck-low-on-i2c-transfer/
  // try to deblock a SDA line that is stuck low by bit-banging out a clock signal
  // and waiting until the send buffer of any slave is empty

  // disable interrupts
  I2C_ITConfig(iicx->base, I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR, DISABLE);

  I2C_Cmd(I2C2, DISABLE);
  LL_GPIO_InitTypeDef GPIO_InitStructure;

  // reconfigure IIC pins to push pull
  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = LL_GPIO_MODE_OUTPUT;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

  u32 i;
  for (i=0; i<16; i++) {
    /*Reset the SDA Pin*/
    GPIO_ResetBits(GPIOB, MIOS32_IIC0_SDA_PIN);
    MIOS32_DELAY_Wait_uS(1000);
    /*Reset the SCL Pin*/
    GPIO_ResetBits(GPIOB, MIOS32_IIC0_SCL_PIN);
    MIOS32_DELAY_Wait_uS(1000);
    /*Set the SCL Pin*/
    GPIO_SetBits(GPIOB, MIOS32_IIC0_SCL_PIN);
    MIOS32_DELAY_Wait_uS(1000);
    /*Set the SDA Pin*/
    GPIO_SetBits(GPIOB, MIOS32_IIC0_SDA_PIN);
    MIOS32_DELAY_Wait_uS(1000);
  }

  LL_GPIO_StructInit(&GPIO_InitStructure);
  GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_MEDIUM;
  GPIO_InitStructure.Mode = GPIO_Mode_AF;
  GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;

  GPIO_InitStructure.Pin = MIOS32_IIC0_SCL_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SCL_PORT, &GPIO_InitStructure);
  GPIO_InitStructure.Pin = MIOS32_IIC0_SDA_PIN;
  LL_GPIO_Init(MIOS32_IIC0_SDA_PORT, &GPIO_InitStructure);

  I2C_Cmd(I2C2, ENABLE); 
#endif

  // re-initialize peripheral
  MIOS32_IIC_InitPeripheral(iic_port);

  // release semaphore (!)
  iicx->iic_semaphore = 0;

  return (iicx->last_transfer_error=MIOS32_IIC_ERROR_TIMEOUT);
}

static void EV_IRQHandler(iic_rec_t *iicx)
{
  u32 SR1Register = iicx->base->SR1;

  if( iicx->base->SR2 ); // SR2Register not used, but we've to read this SFR to clear the flags

  /* If SB = 1, I2C master sent a START on the bus: EV5) */
  if( (SR1Register & 0x0001) == 0x0001 ) {
    // don't send address if stop was requested (WRITE_WITHOUT_STOP - mode, start condition was sent)
    // we have to wait for the application to start the next transfer
    if( iicx->transfer_state.STOP_REQUESTED ) {
      // transfer finished
      iicx->transfer_state.BUSY = 0;
      // disable all interrupts
      iicx->base->CR2 &= (u16)~(I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR);
      return;
    }

    /* Send the slave address for transmssion or for reception (according to the configured value
       in the write master write routine */
    iicx->base->DR = iicx->iic_address;
    return;
  }

  /* If ADDR = 1, EV6 */
  if( (SR1Register & 0x0002) == 0x0002 ) {
    /* Write the first data in case the Master is Transmitter */
    if( !(iicx->iic_address & 1) ) {
      if( iicx->buffer_len == 0 ) { // no data transmitted (only address was sent)
	/* Program the STOP */
	iicx->base->CR1 |= 0x0200; // CR1_STOP_Set
	iicx->transfer_state.STOP_REQUESTED = 1;

	// disable all interrupts
	iicx->base->CR2 &= (u16)~(I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR);

	// transfer finished
	iicx->transfer_state.BUSY = 0;	
      } else {
	if( iicx->buffer_ix < iicx->buffer_len ) {
	  /* Write the first data in the data register */
	  iicx->base->DR = (iicx->tx_buffer_ptr == NULL) ? 0 : iicx->tx_buffer_ptr[iicx->buffer_ix++];
	}

	/* If no further data to be sent, disable the I2C BUF IT
	   in order to not have a TxE interrupt */
	if( iicx->buffer_ix >= iicx->buffer_len ) {
	  iicx->base->CR2 &= (u16)~I2C_IT_BUF;
	}
      }
    } else {
      /* Master Receiver */

      /* At this stage, ADDR is cleared because both SR1 and SR2 were read.*/
      /* EV6_1: used for single byte reception. The ACK disable and the STOP
	 Programming should be done just after ADDR is cleared. */
      if( iicx->buffer_len == 1 ) {
	/* Clear ACK */
	iicx->base->CR1 &= 0xFBFF; // CR1_ACK_Reset
	/* Program the STOP */
	iicx->base->CR1 |= 0x0200; // CR1_STOP_Set
	iicx->transfer_state.STOP_REQUESTED = 1;
      }
    }

    return;
  }

  /* Master transmits the remaing data: from data2 until the last one.  */
  /* If TXE is set */
  if( (SR1Register &0x0084) == 0x0080 ) {
    /* If there is still data to write */
    if( iicx->buffer_ix < iicx->buffer_len ) {
      /* Write the first data in the data register */
      iicx->base->DR = (iicx->tx_buffer_ptr == NULL) ? 0 : iicx->tx_buffer_ptr[iicx->buffer_ix++];

      /* If no data remains to write, disable the BUF IT in order
	 to not have again a TxE interrupt. */
      if( iicx->buffer_ix >= iicx->buffer_len ) {
	/* Disable the BUF IT */
	iicx->base->CR2 &= (u16)~I2C_IT_BUF;
      }
    }

    return;
  }

  /* If BTF and TXE are set (EV8_2), program the STOP */
  if( (SR1Register & 0x0084) == 0x0084 ) {
    /* Program the STOP */
    iicx->base->CR1 |= 0x0200; // CR1_STOP_Set
    iicx->transfer_state.STOP_REQUESTED = 1;

    // disable all interrupts
    iicx->base->CR2 &= (u16)~(I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR);

    // transfer finished
    iicx->transfer_state.BUSY = 0;

    return;
  }

  /* If RXNE is set */
  if( (SR1Register & 0x0040) == 0x0040 && iicx->rx_buffer_ptr != NULL ) {
    /* Read the data register */

    u8 b = iicx->base->DR;

    // failsave: still place in buffer?
    if( iicx->buffer_ix < iicx->buffer_len )
      iicx->rx_buffer_ptr[iicx->buffer_ix++] = b;

    // last byte received, disable interrupts and return.
    if( iicx->transfer_state.STOP_REQUESTED ) {
      // transfer finished
      iicx->transfer_state.BUSY = 0;
      // disable all interrupts
      iicx->base->CR2 &= (u16)~(I2C_IT_EVT | I2C_IT_BUF | I2C_IT_ERR);
      return;
    }
 
    // request NAK and stop condition before receiving last data
    if( (iicx->buffer_ix >= iicx->buffer_len-1) || (iicx->transfer_state.ABORT_IF_FIRST_BYTE_0 && iicx->buffer_ix == 1 && b == 0x00) ) {
      /* Clear ACK */
      iicx->base->CR1 &= 0xFBFF; // CR1_ACK_Reset
      /* Program the STOP */
      iicx->base->CR1 |= 0x0200; // CR1_STOP_Set
      iicx->transfer_state.STOP_REQUESTED = 1;
    }

    return;
  }
}
